feat(footer): criando responsividade no componente

--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -2,3 +2,9 @@
 $primaryblue: #0093D8;
 $yellow: #D6C300;
 $primaryText: #231F20;
+
+//breakpoints
+$sm: '640px';
+$md: '768px';
+$lg: '1024px';
+$xl: '1280px';
