--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -2,49 +2,43 @@
 
 :host {
   background-color: $primaryblue;
-  padding: 96px 0 86px;
-}
-
-.logo {
-    margin-bottom: 57px;
-}
-
-.contact-info {
-    .contact-title {
-        font-size: 44px;
-        margin-bottom: 2rem;
-    }
+  padding: 37px 0 72px;
+  @media (min-width: $lg) {
+    padding: 96px 0 86px;
+  }
 }
 
 .contact-form {
   .form {
     position: relative;
-    padding: 32px 55px;
-    border-radius: 83px;
-    .form-title {
-      margin-bottom: 1.5rem;
-      margin-left: 45px;
+    padding: 48px 16px;
+    border-radius: 43px;
+
+    @media (min-width: $lg) {
+      border-radius: 83px;
+      padding: 32px 55px;
     }
 
     .input-control {
       border: 1px solid #231F20;
-      border-radius: 36px;
-      margin-bottom: 1.5rem;
       color: $primaryText;
-      padding: 2rem 1rem;
-      &.input {
-          height: 71px;
-      }
     }
 
     .form-button {
       border-radius: 36px;
-      background-color: $yellow;
-      width: 321px;
-      height: 71px;
+      background-color: #D6C300;
+      width: 160px;
+      height: 50px;
       position: absolute;
-      bottom: -35px;
-      left: calc(50% - 160px);
+      bottom: -25px;
+      left: calc(50% - 80px);
+
+      @media (min-width: $md) {
+        width: 321px;
+        height: 71px;
+        bottom: -35px;
+        left: calc(50% - 160px);
+      }
     }
   }
 }
