--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<header app-header></header>
+<main class="container">
+    <router-outlet></router-outlet>
+</main>
+<footer app-footer></footer>
