--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,60 @@
 <section class="container">
-    <p>header works!</p>
+    <nav>
+        <div class="max-w-7xl mx-auto px-2 md:px-6 lg:px-8">
+            <div class="relative flex items-center justify-between h-24 md:h-16">
+                <div class="absolute inset-y-0 left-0 flex items-center md:hidden">
+                    <button type="button"
+                        class="inline-flex menu items-center justify-center p-2 rounded-md text-gray-400 hover:text-white  focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+                        aria-controls="mobile-menu" aria-expanded="false" (click)="open = !open">
+                        <span class="sr-only">Open main menu</span>
+                        <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                        <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                    </button>
+                </div>
+                <div class="flex-1 flex items-center justify-center md:items-stretch md:justify-start">
+                    <div class="flex-shrink-0 flex items-center">
+                        <img class="block lg:hidden h-20 w-auto" src="assets/images/logo-santo-job-centralizado.png"
+                            alt="logo Santo Job">
+                        <img class="hidden lg:block w-52" src="assets/images/logo-santo-job-centralizado.png"
+                            alt="logo Santo Job">
+                    </div>
+                    <div class="hidden md:flex items-center md:ml-6 w-full">
+                        <div class="flex space-x-4 w-full justify-around items-center">
+                            <a href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-2xl selected"
+                                aria-current="page">Quem somos</a>
+
+                            <a href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-2xl">O que fazemos</a>
+
+                            <a href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-2xl">Influencers</a>
+
+                            <a href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-2xl">Fale conosco</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 </section>
+<!-- Menu Mobile -->
+<div class="md:hidden absolute top-24 bg-black w-full" [hidden]="!open" id="mobile-menu">
+    <div class="px-2 pt-2 pb-3 space-y-1">
+        <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium"
+            aria-current="page">Quem somos</a>
+        <a href="#"
+            class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">O
+            que fazemos</a>
+        <a href="#"
+            class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Influencers</a>
+        <a href="#"
+            class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Fale
+            conosco</a>
+    </div>
+</div>
