--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -1,7 +1,25 @@
 // Colors
-$primaryblue: #0093D8;
-$yellow: #D6C300;
-$primaryText: #231F20;
+$primaryBlueColor: #0093D8;
+$primaryYellowColor: #D6C300;
+$primaryBlackColor: #231F20;
+$disableColor: #D9D9D9;
+
+.color-primary-blue {
+    color: $primaryBlueColor;
+}
+
+.color-primary-yellow {
+    color: $primaryYellowColor;
+}
+
+.color-primary-black {
+    color: $primaryBlackColor;
+}
+
+.color-disable {
+    color: $disableColor;
+}
+
 
 //breakpoints
 $sm: '640px';
