--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+<section class="first-banner">
+  <div class="bg">
+    <img src="assets/images/logo-santo-job-centralizado.png" class="logo-img" alt="logo santo job">
+    <div class="social-box">
+        <a href="https://www.facebook.com/"><img src="assets/images/icons/facebook.png" class="social-icon" alt="facebook"></a>
+        <a href="https://www.instagram.com/"><img src="assets/images/icons/instagram.png" class="social-icon" alt="instagram"></a>
+        <a href="https://www.linkedin.com/"><img src="assets/images/icons/linkedin.png" class="social-icon" alt="linkedin"></a>
+    </div>
+    <img src="assets/images/cloud-md.png" class="nuvems nuvem-sm" alt="nuvem nuvem-sm">
+    <img src="assets/images/cloud-md.png" class="nuvems nuvem-md" alt="nuvem nuvem-md">
+    <img src="assets/images/cloud-lg.png" class="nuvems nuvem-lg" alt="nuvem nuvem-lg">
+  </div>
+</section>
+
+
+<header app-header></header>
+<main>
+  <p>home</p>
+</main>
+<footer app-footer></footer>
