feat(home): criando tercer banner da home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,19 +1,19 @@
 <section class="first-banner">
   <div class="bg">
     <h1 class="title-img">
-      <img src="assets/images/logo-santo-job-centralizado.png" class="logo-img" alt="logo santo job">
+      <img src="/assets/images/logo-santo-job-centralizado.png" class="logo-img" alt="logo santo job">
     </h1>
     <div class="social-box">
-      <a href="https://www.facebook.com/"><img src="assets/images/icons/facebook.png" class="social-icon"
+      <a href="https://www.facebook.com/"><img src="/assets/images/icons/facebook.png" class="social-icon"
           alt="facebook"></a>
-      <a href="https://www.instagram.com/"><img src="assets/images/icons/instagram.png" class="social-icon"
+      <a href="https://www.instagram.com/"><img src="/assets/images/icons/instagram.png" class="social-icon"
           alt="instagram"></a>
-      <a href="https://www.linkedin.com/"><img src="assets/images/icons/linkedin.png" class="social-icon"
+      <a href="https://www.linkedin.com/"><img src="/assets/images/icons/linkedin.png" class="social-icon"
           alt="linkedin"></a>
     </div>
-    <img src="assets/images/cloud-md.png" class="nuvems nuvem-sm" alt="nuvem nuvem-sm">
-    <img src="assets/images/cloud-md.png" class="nuvems nuvem-md" alt="nuvem nuvem-md">
-    <img src="assets/images/cloud-lg.png" class="nuvems nuvem-lg" alt="nuvem nuvem-lg">
+    <img src="/assets/images/cloud-md.png" class="nuvems nuvem-sm" alt="nuvem nuvem-sm">
+    <img src="/assets/images/cloud-md.png" class="nuvems nuvem-md" alt="nuvem nuvem-md">
+    <img src="/assets/images/cloud-lg.png" class="nuvems nuvem-lg" alt="nuvem nuvem-lg">
   </div>
 </section>
 
@@ -24,14 +24,30 @@
       <div class="second-title-group">
         <span class="second-title-text">bem-vindo</span>
         <div class="images-group">
-            <img src="assets/images/icons/tres-linhas-pretas.png" class="title-image" alt="tres linhas pretas">
-            <img src="assets/images/icons/tres-linhas-amarelas.png" class="title-image" alt="tres linhas amarelas">
+            <img src="/assets/images/icons/tres-linhas-pretas.png" class="title-image" alt="tres linhas pretas">
+            <img src="/assets/images/icons/tres-linhas-amarelas.png" class="title-image" alt="tres linhas amarelas">
         </div>
       </div>
       <span class="subtitle-box">ao nosso universo particular</span>
     </h2>
-    <img src="assets/images/logo-santo-job-centralizado.png" class="logo-img" alt="logo santo job">
+    <img src="/assets/images/logo-santo-job-centralizado.png" class="logo-img" alt="logo santo job">
+  </div>
+</section>
 
+<section class="third-banner">
+  <div class="bg">
+    <h2 class="title-section">
+      <span class="symbol" aria-hidden="true">-</span>
+      <span class='title-one'>
+        <span class="title-one-text">nAo fazEMos milaGREs</span>
+        <span class="images-group">
+          <img src="/assets/images/icons/tres-linhas-pretas.png" class="title-image" alt="tres linhas pretas">
+          <img src="/assets/images/icons/tres-linhas-amarelas.png" class="title-image" alt="tres linhas amarelas">
+      </span>
+      </span>
+      <span class="subtitle-box">mas chegamos bem perto!</span>
+    </h2>
+    <img src="/assets/images/logo-santo-job-centralizado.png" class="logo-img" alt="logo santo job">
   </div>
 </section>
 
