--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -19,6 +19,7 @@
 
     .title-img {
       width: 70%;
+
       @media (min-width: $lg) {
         width: 50%;
       }
@@ -128,11 +129,18 @@
         font-size: 2rem;
         margin-left: 1.5rem;
 
-        @media (min-width: $lg) {
-          font-size: 6rem;
+        @media (min-width: $md) {
+          font-size: 3rem;
           margin-left: 4rem;
         }
 
+        @media (min-width: $lg) {
+          font-size: 4rem;
+        }
+
+        @media (min-width: $xl) {
+          font-size: 6rem;
+        }
       }
 
       .second-title-group {
@@ -144,9 +152,17 @@
           font-size: 2.5rem;
           margin-left: 1.5rem;
 
-          @media (min-width: $lg) {
-            font-size: 8.5rem;
+          @media (min-width: $md) {
+            font-size: 4rem;
             margin-left: 4rem;
+          }
+
+          @media (min-width: $lg) {
+            font-size: 5.5rem;
+          }
+
+          @media (min-width: $xl) {
+            font-size: 8.5rem;
           }
         }
 
@@ -154,6 +170,10 @@
           display: flex;
           position: relative;
           width: 45px;
+
+          @media (min-width: $md) {
+            width: 64px;
+          }
 
           @media (min-width: $lg) {
             width: 200px;
@@ -195,26 +215,197 @@
         background: #0093D8 0% 0% no-repeat padding-box;
         border-radius: 63px;
         display: flex;
-        padding: .5rem 1rem;
+        padding: 0 1rem;
         justify-content: space-around;
         width: auto;
         color: white;
         font-size: 1.25rem;
 
-        @media (min-width: $lg) {
-          padding: 1.25rem 4rem;
-          font-size: 6rem;
+        @media (min-width: $md) {
+          padding: 0 4rem;
+          font-size: 3rem;
         }
 
-        .social-icon {
-          height: 1rem;
+        @media (min-width: $lg) {
+          font-size: 4rem;
+        }
+
+        @media (min-width: $xl) {
+          font-size: 6rem;
+        }
+      }
+    }
+
+  }
+}
+
+.third-banner {
+  background: url('/assets/images/bg-home-3.png') no-repeat center;
+  position: relative;
+  overflow: hidden;
+  background-size: cover;
+  background-position: top center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+
+  .bg {
+    width: 100vw;
+    height: 100vh;
+    background: url('/assets/images/luz-superior.png') no-repeat center;
+    background-size: cover;
+    background-position: top center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .title-section {
+      display: flex;
+      flex-direction: column;
+      padding-left: 4rem;
+      position: relative;
+
+      .symbol {
+        font-family: 'Maybe Maybe Not';
+        font-size: 2rem;
+        position: absolute;
+        top: -32px;
+        left: 90px;
+
+        @media (min-width: $md) {
+          font-size: 3rem;
+          top: -45px;
+          left: 105px;
+        }
+
+        @media (min-width: $lg) {
+          font-size: 4rem;
+          position: absolute;
+          top: -64px;
+          left: 115px;
+        }
+
+        @media (min-width: $xl) {
+          font-size: 84px;
+          position: absolute;
+          top: -80px;
+          left: 130px;
+        }
+      }
+
+      .title-one {
+        font-family: 'Maybe Maybe Not';
+        font-size: 2rem;
+        position: relative;
+        width: 50%;
+
+        @media (min-width: $md) {
+          font-size: 3rem;
+        }
+
+        @media (min-width: $lg) {
+          font-size: 4rem;
+          width: 50%;
+        }
+
+        @media (min-width: $xl) {
+          font-size: 5rem;
+          width: 50%;
+        }
+
+        .images-group {
+          width: 45px;
+          position: absolute;
+          top: -20px;
+          left: 65px;
+
+          @media (min-width: $md) {
+            left: 100px;
+          }
 
           @media (min-width: $lg) {
-            height: 2.5rem;
+            width: 200px;
+            top: -36px;
+            left: 160px
+          }
+
+          @media (min-width: $xl) {
+            width: 200px;
+            top: -85px;
+            left: 180px;
+          }
+
+          .title-image {
+            width: 171px;
+            z-index: 1;
+            position: absolute;
+            top: -10px;
+            left: -5px;
+
+            @media (min-width: $lg) {
+              width: 96px;
+              top: -25px;
+              left: -35px;
+            }
+
+            @media (min-width: $xl) {
+              width: 171px;
+              left: -35px;
+            }
+
+            &:last-child {
+              top: -10px;
+              left: -5px;
+              z-index: 0;
+
+              @media (min-width: $lg) {
+                top: -25px;
+                left: -35px;
+                z-index: 0;
+              }
+
+            }
           }
         }
       }
     }
 
+    .logo-img {
+      width: 30%;
+      height: auto;
+      position: absolute;
+      top: 2.5rem;
+      right: 35%;
+
+      @media (min-width: $lg) {
+        width: 20%;
+        height: auto;
+        position: absolute;
+        top: 2.5rem;
+        right: 2.5rem;
+      }
+    }
+
+    .subtitle-box {
+      width: auto;
+      color: white;
+      font-size: 1.25rem;
+
+      @media (min-width: $md) {
+        font-size: 2.5rem;
+      }
+
+      @media (min-width: $lg) {
+        font-size: 4rem;
+      }
+
+      @media (min-width: $xl) {
+        font-size: 5rem;
+      }
+    }
   }
 }
