--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -14,12 +14,25 @@
 
 @font-face {
   font-family: 'Futura Bk BT';
-  src: url('FuturaBT-Book.eot');
-  src: url('FuturaBT-Book.eot?#iefix') format('embedded-opentype'),
-    url('FuturaBT-Book.woff2') format('woff2'),
-    url('FuturaBT-Book.woff') format('woff'),
-    url('FuturaBT-Book.ttf') format('truetype'),
-    url('FuturaBT-Book.svg#FuturaBT-Book') format('svg');
+  src: url('/assets/fonts/FuturaBT-Book.eot');
+  src: url('/assets/fonts/FuturaBT-Book.eot?#iefix') format('embedded-opentype'),
+    url('/assets/fonts/FuturaBT-Book.woff2') format('woff2'),
+    url('/assets/fonts/FuturaBT-Book.woff') format('woff'),
+    url('/assets/fonts/FuturaBT-Book.ttf') format('truetype'),
+    url('/assets/fonts/FuturaBT-Book.svg#FuturaBT-Book') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Maybe Maybe Not';
+  src: url('/assets/fonts/MaybeMaybeNot.eot');
+  src: url('/assets/fonts/MaybeMaybeNot.eot?#iefix') format('embedded-opentype'),
+      url('/assets/fonts/MaybeMaybeNot.woff2') format('woff2'),
+      url('/assets/fonts/MaybeMaybeNot.woff') format('woff'),
+      url('/assets/fonts/MaybeMaybeNot.ttf') format('truetype'),
+      url('/assets/fonts/MaybeMaybeNot.svg#MaybeMaybeNot') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -31,4 +44,8 @@
 
 .futura-book-bt {
   font-family: 'Futura Bk BT'
+}
+
+.maybe-maybe-not {
+  font-family: 'Maybe Maybe Not'
 }
