fix(home): criando modulo quem somos

--- a/src/app/pages/home/components/first-banner/first-banner.component.scss
+++ b/src/app/pages/home/components/first-banner/first-banner.component.scss
@@ -1,7 +1,7 @@
 @import "/src/app/shared/styles/variables";
 
 .first-banner {
-  background: transparent radial-gradient(closest-side at 47% 60%, #83D2DA 0%, #277FB1 100%) 0% 0% no-repeat padding-box;
+  background: transparent radial-gradient(closest-side at 47% 60%, #80CFD8 0%, #67B9CD 100%) 0% 0% no-repeat padding-box;
   opacity: 1;
   position: relative;
   overflow: hidden;
