--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,8 @@
 <section app-first-banner></section>
 <section app-second-banner></section>
 <section app-third-banner></section>
-
 <header app-header></header>
 <main>
-  <p>home</p>
+  <section app-who-are-we></section>
 </main>
 <footer app-footer></footer>
