--- a/src/app/pages/home/components/first-banner/first-banner.component.scss
+++ b/src/app/pages/home/components/first-banner/first-banner.component.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
 
   .bg {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: url('/assets/images/top-cloud.png') no-repeat center;
     background-size: cover;
