--- a/src/app/pages/home/components/second-banner/second-banner.component.scss
+++ b/src/app/pages/home/components/second-banner/second-banner.component.scss
@@ -5,7 +5,7 @@
     overflow: hidden;
   
     .bg {
-      width: 100vw;
+      width: 100%;
       height: 100vh;
       background-color: white;
       background-size: cover;
