--- a/src/app/pages/home/components/third-banner/third-banner.component.scss
+++ b/src/app/pages/home/components/third-banner/third-banner.component.scss
@@ -10,11 +10,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
   
     .bg {
-      width: 100vw;
+      width: 100%;
       height: 100vh;
       background: url('/assets/images/luz-superior.png') no-repeat center;
       background-size: cover;
