feat(sponsors-component): criando o modulo de partners na home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,5 +4,6 @@
 <header app-header></header>
 <main>
   <section app-who-are-we></section>
+  <section app-sponsors></section>
 </main>
 <footer app-footer></footer>
