feat(home): criando componente o que fazemos

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,6 +4,7 @@
 <header app-header></header>
 <main>
   <section app-who-are-we></section>
+  <section app-what-do-we-do></section>
   <section app-sponsors></section>
 </main>
 <footer app-footer></footer>
