--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <section class="container">
     <nav>
         <div class="max-w-7xl mx-auto px-2 md:px-6 lg:px-8">
-            <div class="relative flex items-center justify-between h-24 md:h-16">
+            <div class="relative flex items-center justify-between h-20 md:h-16">
                 <div class="absolute inset-y-0 left-0 flex items-center md:hidden">
                     <button type="button"
                         class="inline-flex menu items-center justify-center p-2 rounded-md text-gray-400 hover:text-white  focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
@@ -22,7 +22,7 @@
                 <div class="flex-1 flex items-center justify-center md:items-stretch md:justify-start">
                     <div class="flex-shrink-0 flex items-center">
                         <a routerLink='/' routerLinkActive="router-link-active">
-                            <img class="block lg:hidden h-20 w-auto" src="/assets/images/logo-santo-job-centralizado.png"
+                            <img class="block lg:hidden h-16 w-auto" src="/assets/images/logo-santo-job-centralizado.png"
                                 alt="logo Santo Job">
                         </a>
                         <a routerLink='/' routerLinkActive="router-link-active">
@@ -33,16 +33,16 @@
                     <div class="hidden md:flex items-center md:ml-6 w-full">
                         <ul class="flex space-x-4 w-full justify-around items-center">
                             <li href="#"
-                                class="futura-book-bold color-disable text-base lg:text-lg xl:text-2xl selected"
+                                class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl selected"
                                 aria-current="page">Quem somos</li>
 
-                            <li href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-2xl">O que
+                            <li href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl">O que
                                 fazemos</li>
 
-                            <li href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-2xl">
+                            <li href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl">
                                 Influencers</li>
 
-                            <li href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-2xl">Fale
+                            <li href="#" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl">Fale
                                 conosco</li>
                         </ul>
                     </div>
@@ -52,7 +52,7 @@
     </nav>
 </section>
 <!-- Menu Mobile -->
-<div class="md:hidden absolute top-24 bg-black w-full" [hidden]="!open" id="mobile-menu">
+<div class="md:hidden absolute top-20 bg-black w-full" [hidden]="!open" id="mobile-menu">
     <ul class="px-2 pt-2 pb-3 space-y-1">
         <li href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium"
             aria-current="page">Quem somos</li>
