--- a/src/app/pages/home/components/sponsors/sponsors.component.scss
+++ b/src/app/pages/home/components/sponsors/sponsors.component.scss
@@ -11,6 +11,7 @@
     font-size: 1.125rem;
     font-family: 'Futura Book';
     text-align: center;
+    opacity: 0.3;
 
     @media (min-width: $lg) {
       font-size: 1.75rem;
