--- a/src/app/pages/home/components/what-do-we-do/what-do-we-do.component.html
+++ b/src/app/pages/home/components/what-do-we-do/what-do-we-do.component.html
@@ -1,15 +1,53 @@
-<div class="container container-what-do-we-do">
-    <h2 class="main-title">O que fazemos?</h2>
-    <div class="main-content-section">
-        <ul class="services-list flex flex-wrap -mx-2 overflow-hidden sm:-mx-3 md:-mx-3 lg:-mx-3 xl:-mx-3">
-            <li class="services-item my-2 px-2 w-1/2 overflow-hidden sm:my-3 sm:px-3 sm:w-1/3 md:my-3 md:px-3 md:w-1/3 lg:my-3 lg:px-3 lg:w-1/4 xl:my-3 xl:px-3 xl:w-1/6"
-                *ngFor="let service of servicesList">
-                <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
-                    <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
-                    <!-- <fa-icon [icon]="icons['faGlasses']" alt="icone de publicidade" class="services-item-image"></fa-icon> -->
-                    <span class='services-item-text'>{{service.name}}</span>
-                </a>
-            </li>
-        </ul>
+<ng-container *ngIf="view === 'default'">
+    <div class="container container-what-do-we-do">
+        <h2 class="main-title">O que fazemos?</h2>
+        <div class="main-content-section">
+            <ul class="services-list flex flex-wrap -mx-2 overflow-hidden sm:-mx-3 md:-mx-3 lg:-mx-3 xl:-mx-3">
+                <li class="services-item my-2 px-2 w-1/2 sm:my-3 sm:px-3 sm:w-1/3 md:my-3 md:px-3 md:w-1/3 lg:my-3 lg:px-3 lg:w-1/4 xl:my-3 xl:px-3 xl:w-1/6"
+                    *ngFor="let service of servicesList">
+                    <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
+                        <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
+                        <!-- <fa-icon [icon]="icons['faGlasses']" alt="icone de publicidade" class="services-item-image"></fa-icon> -->
+                        <span class='services-item-text'>{{service.name}}</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
+</ng-container>
+
+<ng-container *ngIf="view === 'page-1'">
+    <div class="container container-what-do-we-do">
+        <h2 class="main-title">O que fazemos?</h2>
+        <div class="main-content-section">
+            <ul class="services-list flex flex-wrap -mx-2 overflow-hidden sm:-mx-3 md:-mx-3 lg:-mx-3 xl:-mx-3">
+                <li class="services-item my-2 px-2 w-1/2 sm:my-3 sm:px-3 sm:w-1/3 md:my-3 md:px-3 md:w-1/3 lg:my-3 lg:px-3 lg:w-1/4 xl:my-3 xl:px-3 xl:w-1/6"
+                    *ngFor="let service of servicesList | slice:0:6">
+                    <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
+                        <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
+                        <!-- <fa-icon [icon]="icons['faGlasses']" alt="icone de publicidade" class="services-item-image"></fa-icon> -->
+                        <span class='services-item-text'>{{service.name}}</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</ng-container>
+
+<ng-container *ngIf="view === 'page-2'">
+    <div class="container container-what-do-we-do">
+        <h2 class="main-title">O que fazemos?</h2>
+        <div class="main-content-section">
+            <ul class="services-list flex flex-wrap -mx-2 overflow-hidden sm:-mx-3 md:-mx-3 lg:-mx-3 xl:-mx-3">
+                <li class="services-item my-2 px-2 w-1/2 sm:my-3 sm:px-3 sm:w-1/3 md:my-3 md:px-3 md:w-1/3 lg:my-3 lg:px-3 lg:w-1/4 xl:my-3 xl:px-3 xl:w-1/6"
+                    *ngFor="let service of servicesList | slice:6:12">
+                    <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
+                        <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
+                        <!-- <fa-icon [icon]="icons['faGlasses']" alt="icone de publicidade" class="services-item-image"></fa-icon> -->
+                        <span class='services-item-text'>{{service.name}}</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</ng-container>
