--- a/src/app/pages/home/components/who-are-we/who-are-we.component.scss
+++ b/src/app/pages/home/components/who-are-we/who-are-we.component.scss
@@ -1,72 +1,76 @@
 @import "/src/app/shared/styles/variables";
 
+:host {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
 .container-who-are-we {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   position: relative;
   overflow: hidden;
   padding: 1rem;
-  gap: 1rem;
+  height: 100vh;
+  gap: 2rem;
 
-  @media (min-width: $lg) {
-    padding: 88px 0 50px;
+  @media (min-width: $md) {
+    gap: 1rem;
   }
 
   @media (min-width: $xl) {
-    padding: 88px 0 115px;
+    gap: 4rem;
   }
 
   .main-title {
-    font-size: 1.75rem;
+    font-size: 1.25rem;
     font-family: 'Futura Book';
     text-align: center;
 
     @media (min-width: $md) {
-      font-size: 2.5rem;
-    }
-
-    @media (min-width: $lg) {
-      font-size: 4rem;
-    }
-
-    @media (min-width: $xl) {
-      font-size: 6rem;
+      font-size: 2rem;
     }
   }
 
   .main-content-section {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     flex-direction: column;
+
+    @media (min-width: $md) {
+      gap: 1rem;
+    }
 
     @media (min-width: $lg) {
       flex-direction: row;
       position: relative;
       align-items: center;
+      gap: 2rem;
     }
 
     .joao-neto-image {
-      @media (min-width: $md) and (max-width: $lg) {
+      @media (max-width: $lg) {
         display: flex;
         flex-wrap: wrap;
       }
 
       @media (min-width: $lg) {
-        width: 25%;
+        width: 200px;
         margin: 0;
       }
 
       img {
         border-radius: 50%;
-        border: 4px solid;
-        padding: .5rem;
-        width: 50%;
-        margin: 0 auto;
+        border: 2px solid;
+        padding: 0.25rem;
+        width: 100px;
 
-        @media (min-width: $md) and (max-width: $lg) {
-          width: 25%;
-          margin: 0;
+        @media (min-width: $md) {
+          width: 150px;
         }
 
         @media (min-width: $lg) {
@@ -76,20 +80,29 @@
       }
 
       .image-titles-tablet {
-        @media (min-width: $md) and (max-width: $lg) {
-          width: 50%;
+
+          width: calc(100% - 100px);
+          align-items: flex-start;
           display: flex;
           flex-direction: column;
           align-self: center;
-          padding-left: 2rem;
+          padding-left: 1rem;
+
+
+        @media (min-width: $md) {
+          width: calc(100% - 150px);
         }
 
         .text-content-title {
           display: none;
 
-          @media (min-width: $md) and (max-width: $lg) {
+          @media (max-width: $md) {
+            text-align: center;
+          }
+
+          @media (max-width: $lg) {
             display: block;
-            font-size: 1.75rem;
+            font-size: 1rem;
             text-align: left;
             font-family: 'Futura Book';
           }
@@ -98,10 +111,14 @@
         .text-content-subtitle {
           display: none;
 
-          @media (min-width: $md) and (max-width: $lg) {
+          @media (max-width: $md) {
+            text-align: center;
+          }
+
+          @media (max-width: $lg) {
             display: block;
             text-align: left;
-            font-size: 1.5rem;
+            font-size: 1rem;
             width: 80%;
           }
         }
@@ -116,6 +133,10 @@
       gap: 1rem;
 
       @media (min-width: $lg) {
+        width: 55%;
+      }
+
+      @media (min-width: $xl) {
         width: 50%;
       }
 
@@ -130,7 +151,7 @@
 
         @media (min-width: $lg) {
           text-align: left;
-          font-size: 1.75rem;
+          font-size: 1.25rem
         }
       }
 
@@ -144,31 +165,26 @@
 
         @media (min-width: $lg) {
           text-align: left;
-          font-size: 1.5rem;
+          font-size: 1.25rem;
           width: 80%;
         }
       }
 
       .text-content-description {
-        font-size: 1.125rem;
+        font-size: 1rem;
 
-        @media (min-width: $md) {
-          font-size: 1.25rem;
-        }
-
-        @media (min-width: $md) and (max-width: $lg) {
-          width: 85%;
+        @media (min-width: $md){
+          width: 90%;
         }
 
         @media (min-width: $lg) {
           width: 100%;
           text-align: left;
-          font-size: 1.25rem;
         }
 
-        @media (min-width: $xl) {
-          width: 75%;
-        }
+        // @media (min-width: $xl) {
+        //   width: 75%;
+        // }
       }
     }
 
@@ -184,15 +200,16 @@
 
         @media (min-width: $lg) {
           position: absolute;
-          right: -7%;
+          right: -15%;
           top: -50px;
           width: 40%;
         }
 
         @media (min-width: $xl) {
           right: 0;
-          top: -50px;
-          width: 35%;
+          top: -110px;
+          width: 400px;
+          z-index: 2;
         }
 
 
@@ -205,19 +222,26 @@
 
 .footer-content {
   background-color: $primaryBlueColor;
-  padding: 30px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 1rem 0;
+  border-top: 1px solid white;
 
-  @media (min-width: $lg) {
-    padding: 112px 0;
+  @media (min-width: $md) {
+    border-top: none;
+  }
+
+  @media (min-width: $xl) {
+    padding: 2rem 0;
   }
 
   .footer-content-text {
     color: white;
-    font-size: 1.125rem;
+    font-size: 1rem;
     line-height: 23px;
 
     @media (min-width: $lg) {
-      font-size: 1.5rem;
       line-height: 30px;
     }
   }
