--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -7,7 +7,8 @@
   z-index: 9;
   display: flex;
   align-items: center;
-  height: 6rem;
+  height: 5rem;
+  border-bottom: 4px solid #0093D8;
   @media (min-width: $md) {
     background-color: #fff;
   }
