fix(home): corrigindo funcionamento do slider vertical

--- a/src/app/pages/home/components/who-are-we/who-are-we.component.scss
+++ b/src/app/pages/home/components/who-are-we/who-are-we.component.scss
@@ -230,6 +230,11 @@
 
   @media (min-width: $md) {
     border-top: none;
+    bottom: 80px;
+  }
+
+  @media (min-width: $lg) {
+    bottom: 120px;
   }
 
   @media (min-width: $xl) {
