--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<header app-header *ngIf="visibleHeader"></header>
+<header app-header *ngIf="visibleHeader" (click)="reload()"></header>
 <swiper [direction]="'vertical'" [slidesPerView]="1" [spaceBetween]="30" [mousewheel]="true" [pagination]="{
       clickable: true
     }" class="mySwiper" (slideChange)="onSlideChange($event)">
