--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -77,7 +77,7 @@
                     <input id="assunto" type="text" placeholder="Assunto" formControlName="assunto"
                         class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
                     <textarea rows="5" id="mensagem" type="text" placeholder="Mensagem" formControlName="mensagem"
-                        class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-12 lg:mb-24"></textarea>
+                        class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-8 lg:mb-24"></textarea>
                     <button type="submit" class="form-button" [disabled]="!contactForm.valid">ENVIAR</button>
                 </form>
             </div>
@@ -89,14 +89,14 @@
     <section class="container text-white">
         <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-24 lg:flex-row-reverse">
             <div class="flex flex-wrap justify-center w-full lg:w-7/12">
-                <div class="logo flex justify-center lg:justify-start mb-14">
-                    <img src="/assets/images/logo-santo-job-white.png" class="w-8/12 md:w-5/12"
+                <div class="logo flex justify-center lg:justify-start mb-6">
+                    <img src="/assets/images/logo-santo-job-white.png" class="w-48 md:w-56"
                         alt="Logo Santo Job Branco">
                 </div>
                 <div class="contact-info flex justify-center flex-wrap">
                     <div class="w-full md:w-6/12 lg:w-full">
                         <h3
-                            class="futura-book-bold contact-title w-full lg:text-left text-3xl lg:text-5xl mb-4 lg:mb-8">
+                            class="futura-book-bold contact-title w-full lg:text-left text-xl lg:text-5xl mb-4 lg:mb-8">
                             Contato</h3>
                         <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
                                     src="/assets/images/icons/icon-phone.png" alt="icone-telefone"
