--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   background-color: $primaryBlueColor;
+  padding: 1rem 0 1rem;
   @media (min-width: $md) {
     padding: 37px 0 72px;
   }
@@ -13,8 +14,8 @@
 .contact-form {
   .form {
     position: relative;
-    padding: 48px 16px;
-    border-radius: 43px;
+    padding: 1rem;
+    border-radius: 1rem;
 
     @media (min-width: $lg) {
       border-radius: 83px;
