--- a/src/app/pages/home/components/what-do-we-do/what-do-we-do.component.scss
+++ b/src/app/pages/home/components/what-do-we-do/what-do-we-do.component.scss
@@ -9,6 +9,11 @@
   padding: 1rem;
   gap: 1rem;
 
+  @media (min-width: $lg) {
+    padding: 2rem 0;
+    gap: 3rem;
+  }
+
   .main-title {
     font-size: 1.25rem;
     font-family: 'Futura Book';
@@ -87,11 +92,7 @@
           gap: .5rem;
 
           .services-item-image {
-            height: 35px;
-
-            @media (min-width: $lg) {
-              height: 100px;
-            }
+            height: 2rem;
           }
 
           .services-item-text {
